# succinct-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  release.toml
.github/workflows/: wasm.yaml
benches/: rank_bench.rs  rank_select.rs  rank_select_bench.rs
process/: Cargo.toml  README.md
process/src/: lib.rs
src/: bit_vector.rs  broadword.rs  errors.rs  int_vec.rs  lib.rs  macros.rs  rank.rs  rsdict.rs  select.rs  space_usage.rs  storage.rs
src/bit_vec/: bit_slice.rs  bit_vector.rs  mod.rs  prim.rs  traits.rs
src/bit_vector/: bit_vec.rs  mod.rs  prim.rs  slice.rs  traits.rs  vec.rs
src/coding/: comma.rs  elias.rs  fib.rs  mod.rs  traits.rs  trans.rs  unary.rs
src/int_vec/: block_type.rs  builder.rs  int_vector.rs  mod.rs  traits.rs
src/int_vector/: int_vec.rs  mod.rs  traits.rs
src/internal/: errors.rs  mod.rs  search.rs  vector_base.rs
src/rank/: jacobson.rs  mod.rs  prim.rs  rank9.rs  traits.rs
src/rsdic/: enum_code.rs  mod.rs  rank_acceleration.rs
src/rsdict/: README.md  constants.rs  enum_code.rs  fuzz.rs  helpers.rs  mod.rs  rank_acceleration.rs  test_helpers.rs
src/select/: bin_search.rs  mod.rs  traits.rs
src/stream/: bit_buffer.rs  mod.rs  traits.rs
src/vector/: int_vec.rs
