[package]
name = "succinct"
version = "0.5.4"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Succinct data structures for Rust"
repository = "https://github.com/tov/succinct-rs"
homepage = "https://github.com/tov/succinct-rs"
documentation = "https://docs.rs/succinct/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["succinct", "rank", "select"]

[features]
default = []
fuzz = ["afl"]

[dependencies]
num-traits = "0.2"
byteorder = "1.2"

[dependencies.afl]
version = "0.5.2"
optional = true

[dependencies.packed_simd]
version = "0.3"
features = ["into_bits"]

[dev-dependencies]
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "rank_select"
harness = false

[[bin]]
name = "rsdict_fuzz"
path = "src/rsdict/fuzz.rs"
required-features = ["fuzz"]
