[package]
name = "succinct"
version = "0.5.4"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Succinct data structures for Rust"
repository = "https://github.com/tov/succinct-rs"
homepage = "https://github.com/tov/succinct-rs"
documentation = "https://docs.rs/succinct/"
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"
keywords = ["succinct", "rank", "select"]

[dependencies]
num-traits = "0.2"
byteorder = "1.4"

[dev-dependencies]
quickcheck = "1.0.3"
