[package]
name = "succinct"
version = "@VERSION@"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Succinct data structures for Rust"
repository = "https://github.com/tov/succinct-rs"
homepage = "https://github.com/tov/succinct-rs"
documentation = "http://tov.github.io/succinct-rs/"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["succinct"]

[dependencies]
clippy = { version = "0", optional = true }
num = "0.1"
typenum = "1.3"
